fix image size on small devices

--- a/docs/_sass/jekyll-theme-cayman.scss
+++ b/docs/_sass/jekyll-theme-cayman.scss
@@ -333,9 +333,8 @@ a {
 }
 
 #prefs-general {
-  width: 70%;
-  min-width: 250px;
-  max-width: 500px;
+  width: 500px;
+  max-width: 100%;
   display: block;
   margin: 0 auto;
 }
